--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,12 @@ spring:
       enabled: true
       path: /h2-console
 
+  # MongoDB 설정
+  data:
+    mongodb:
+      uri: mongodb://quantai:quantaipassword@localhost:27017/stockdb?authSource=admin
+      auto-index-creation: true
+
 webclient:
   maxInMemorySize: 16777216  # 16MB
   connection:
@@ -31,14 +37,16 @@ webclient:
   write:
     timeout: PT5S
 
-kisClient:
-  host: https://openapivts.koreainvestment.com  # 모의투자 환경 URL, 실제 환경은 https://openapi.koreainvestment.com
+kis-client-mock:
+  host: https://openapivts.koreainvestment.com
   port: 29443
+  appKey: ${KIS_MOCK_APP_KEY:MISSING_APP_KEY}
+  appSecret: ${KIS_MOCK_APP_SECRET:MISSING_APP_SECRET}
+kis-client-real:
+  host: https://openapi.koreainvestment.com
+  port: 9443
   appKey: ${KIS_APP_KEY:MISSING_APP_KEY}
   appSecret: ${KIS_APP_SECRET:MISSING_APP_SECRET}
-  customHeaders:
-    tr-id: FHKST01010100  # 주식 시세 조회
-    tr-cont: N
 
 stock:
   batch:
