--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,6 +43,16 @@ spring:
         frequency: PT10S
         min-frequency: PT0.5S
 
+  # Spring AI OpenAI 설정
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY:your-openai-api-key}
+      chat:
+        options:
+          model: gpt-4.1-nano
+          temperature: 0.7
+          max-tokens: 4096
+
 webclient:
   maxInMemorySize: 16777216
   connection:
